--- a/source/styles/blocks/other-action.scss
+++ b/source/styles/blocks/other-action.scss
@@ -1,24 +1,40 @@
 .other-action {
   @include background-green;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 48px;
   min-height: 289px;
-  background: url("../../icons/icon-gift.svg") top 59px center / 78px 80px no-repeat, linear-gradient(to top, #ffffff 0, rgba(104, 183, 56, 0.85) 0), image-set(url("../../images/promo-bg-mobile@1x.jpg") type("image/jpg") 1x, url("../../images/promo-bg-mobile@2x.jpg") type("image/jpg") 2x, url("../../images/promo-bg-mobile@1x.webp") type("image/webp") 1x, url("../../images/promo-bg-mobile@2x.webp") type("image/webp") 2x) center no-repeat;
+  background: linear-gradient(to top, #ffffff 0, rgba(104, 183, 56, 0.85) 0), image-set(url("../../images/promo-bg-mobile@1x.jpg") type("image/jpg") 1x, url("../../images/promo-bg-mobile@2x.jpg") type("image/jpg") 2x, url("../../images/promo-bg-mobile@1x.webp") type("image/webp") 1x, url("../../images/promo-bg-mobile@2x.webp") type("image/webp") 2x) center no-repeat;
 
   @media (min-width: $tablet-width) {
+    flex-direction: row;
+    text-align: start;
+    column-gap: 276px;
     min-height: 200px;
+    background-position: center -317px;
+    background-size: cover;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-position: 0 0, calc(100% - 2px);
+    column-gap: 0;
+    flex-direction: column;
+    grid-column: 2 / 3;
   }
 }
 
 .other-action__text {
+  @include other-action-text;
   color: $base-white;
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
   margin: 0;
-  text-align: center;
-  padding-top: 187px;
 
   @media (min-width: $tablet-width) {
-    padding: 0;
+    text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: center;
   }
 }
