--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -18,8 +18,12 @@
   @media (min-width: $tablet-width) {
     grid-template-rows: 172px auto auto 1fr;
     padding-top: 0;
-    padding-bottom: 40px;
+    padding-block-end: 40px;
     padding-inline: 15px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 245px;
   }
 }
 
@@ -47,6 +51,10 @@
     grid-row: 2 / 3;
     grid-column: 1 / 3;
     padding-inline: 65px;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-inline: 40px;
   }
 }
 
@@ -101,11 +109,24 @@
   grid-row: 4 / 5;
 }
 
+.product__more {
+  display: grid;
+  row-gap: 10px;
+  width: 280px;
+  margin: auto;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-rows: 1fr 1fr 40px;
+    row-gap: 17px;
+    padding-inline: 15px;
+  }
+}
+
 .product__description {
   @include product-title;
   text-transform: uppercase;
   margin: 0;
-  padding-bottom: 8px;
   grid-column: 1 / 3;
 
   @media (min-width: $tablet-width) {
@@ -113,25 +134,20 @@
     padding-inline: 50px;
     padding-block-end: 23px;
   }
+
+  @media (min-width: $tablet-width) {
+    padding-inline: 25px;
+  }
 }
 
 .product__text {
   @include product-info;
   grid-column: 1 / 3;
   margin: 0;
-  padding-bottom: 21px;
+  padding-bottom: 11px;
 
   @media (min-width: $tablet-width) {
     @include product-info-tablet;
-    padding-inline: 20px;
-    padding-block-end: 62px;
-  }
-}
-
-.product__more {
-  @media (min-width: $tablet-width) {
-    display: grid;
-    grid-template-rows: 1fr 1fr 40px;
   }
 }
 
@@ -149,7 +165,6 @@
     border-bottom: none;
     box-shadow: inset 0 0 0 1px $basic-grey;
     background-size: 60px 60px;
-    padding-top: 147px;
-    padding-inline: 37px;
+    padding-top: 170px;
   }
 }
