--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -31,7 +31,7 @@
 
   @media (min-width: $desktop-width) {
     grid-template-rows: 160px 72px 54px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 80px 1fr 1fr;
     padding-top: 110px;
     margin-bottom: 80px;
   }
@@ -58,7 +58,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    grid-column: 1;
+    grid-column: 2;
   }
 }
 
@@ -81,7 +81,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    grid-column: 1;
+    grid-column: 2;
     margin-bottom: 52px;
   }
 }
@@ -96,9 +96,9 @@
   }
 
   @media (min-width: $desktop-width) {
-    grid-area: 1 / 2 / 4 / -1;
+    grid-area: 1 / 3 / 4 / -1;
     margin-block-start: -80px;
-    margin-inline-start: -160px;
+    margin-inline-start: -180px;
   }
 }
 
@@ -113,7 +113,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    grid-column: 3 / 1;
+    grid-column: 3 / 2;
     margin-top: 0;
   }
 }
