--- a/source/styles/mixins.scss
+++ b/source/styles/mixins.scss
@@ -70,6 +70,13 @@
   text-transform: uppercase;
 }
 
+@mixin other-action-text {
+  font-family: "Lato", "Verdana", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+}
+
 //Параметры заголовков в карточке товаров
 
 @mixin product-title {
@@ -82,6 +89,13 @@
 @mixin product-title-tablet {
   font-size: 20px;
   line-height: 24px;
+}
+
+@mixin product-title-other {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 20px;
 }
 
 @mixin product-info {
