--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -12,25 +12,24 @@
 }
 
 .advantages__container {
+  display: grid;
   text-align: left;
+  row-gap: 40px;
+
+  @media (min-width: $tablet-width) {
+    row-gap: 32px;
+  }
 }
 
 .advantages__title {
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
-  margin: 0 0 40px;
-  padding: 0;
+  margin: 0;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
-    margin: 0;
-    margin-bottom: 32px;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-bottom: 32px;
   }
 }
 
