--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -1,6 +1,7 @@
 .form {
   border-top: 1px solid $light-special-gray;
   text-align: left;
+  padding-block: 27px 32px;
 
   &::before {
     content: "";
@@ -9,7 +10,7 @@
     height: 1px;
     background-color: $light-special-gray;
     position: absolute;
-    top: 437px;
+    top: 439px;
   }
 
   &::after {
@@ -19,42 +20,48 @@
     height: 1px;
     background-color: $light-special-gray;
     position: absolute;
-    top: 607px;
+    top: 596px;
   }
 
   @media (min-width: $tablet-width) {
     border: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+
+    &::before,
+    &::after {
+      display: none;
+    }
   }
 
   @media (min-width: $desktop-width) {
-    display: grid;
-    column-gap: 80px;
-    grid-template-columns: repeat(2, 1fr);
-    width: 1220px;
     padding: 0;
-    margin: auto;
+  }
+}
+
+.form__title {
+  @include common-title;
+  margin-inline: 0;
+  margin-block: 0 37px;
+
+  @media (min-width: $tablet-width) {
+    @include common-title-big;
+    margin-block-end: 55px;
+    grid-column: 1 / 3;
   }
 }
 
 .form__text {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 18px;
+  @include form-text;
   margin: 0;
-  margin-bottom: 39px;
-  padding-right: 20px;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     @include common-text-big;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 66px;
     text-transform: uppercase;
     grid-column: 1 / 3;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 55px;
   }
 }
 
@@ -65,6 +72,22 @@
   @media (min-width: $tablet-width) {
     @include common-text-big;
     grid-column: 1 / 3;
+  }
+}
+
+.form__module--info {
+  border: none;
+  margin: 0;
+  padding-inline: 0;
+  padding-block: 37px 24px;
+
+  @media (min-width: $tablet-width) {
+    padding-block: 66px 70px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 2;
+    padding-block: 0;
   }
 }
 
@@ -97,91 +120,169 @@
   }
 }
 
-.form__module--info {
-  border: none;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 46px;
-
-  @media (min-width: $desktop-width) {
-    grid-column: 1 / 2;
-  }
-}
-
 .form__module--diet {
   border: none;
   margin: 0;
-  padding: 0;
-  margin-bottom: 45px;
+  padding-inline: 0;
+  padding-block: 22px 19px;
+
+  @media (min-width: $tablet-width) {
+    box-shadow: 0 0 0 1px $very-light-gray;
+    padding-inline: 27px;
+    padding-block: 23px 27px;
+  }
 
   @media (min-width: $desktop-width) {
-    box-shadow: 0 0 0 1px $very-light-gray;
     grid-column: 2 / 3;
   }
 }
 
 .form__module--contacts {
-  border: none;
-  margin: 0;
+  position: relative;
+  margin-inline: 0;
+  margin-block: 26px 24px;
   padding: 0;
-  margin-bottom: 45px;
+  border: none;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 65px;
+    margin-block: 65px;
   }
 
   @media (min-width: $desktop-width) {
     grid-column: 1 / 3;
+  }
+}
+
+.form__contacts-container {
+  display: grid;
+  row-gap: 35px;
+}
+
+.form__module-legend--contacts {
+  position: relative;
+  padding-bottom: 35px;
+  grid-column: 1 / 3;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 207px;
+    height: 52px;
+    position: absolute;
+    background-color: $base-white;
+    z-index: -1;
+
+    @media (min-width: $tablet-width) {
+      width: 592px;
+      height: 36px;
+      left: -40px;
+    }
+  }
+
+  &::after {
+    content: "";
+    background-color: $base-green;
+    z-index: -2;
+    width: 280px;
+    height: 2px;
+    position: absolute;
+    top: 16px;
+    right: -115px;
+
+    @media (min-width: $tablet-width) {
+      width: 100vw;
+      top: 22px;
+      right: -151px;
+    }
+
+    @media (min-width: $desktop-width) {
+      left: -220px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 76px;
+  }
+}
+
+.form__module-legend--contacts br {
+  @media (min-width: $tablet-width) {
+    display: none;
   }
 }
 
 .form__module--comment {
+  position: relative;
   border: none;
   margin: 0;
-  padding: 0;
-  margin-bottom: 45px;
+  padding-inline: 0;
+  padding-block: 0 23px;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 65px;
+  }
 
   @media (min-width: $desktop-width) {
     grid-column: 1 / 3;
   }
 }
 
-/////////////////////////////////////////////////////
+.form__comment-container {
+  display: grid;
+  row-gap: 38px;
+}
+
+.legend-comment {
+  &::before {
+    content: "";
+    display: block;
+    width: 207px;
+    height: 52px;
+    position: absolute;
+    background-color: $base-white;
+    z-index: -1;
+
+    @media (min-width: $tablet-width) {
+      width: 418px;
+      height: 36px;
+      left: 0;
+    }
+  }
+}
 
 .form__module-list {
   @include list-reset;
+  display: grid;
+  row-gap: 13px;
+
+  @media (min-width: $tablet-width) {
+    row-gap: 18px;
+  }
 }
 
 .form__module-item {
   display: flex;
   align-items: center;
-  margin: 0 0 11px;
-}
-
-.form__module-item:last-child {
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .form__module-radio {
   display: grid;
   grid-template-columns: auto 1fr;
-  margin-bottom: 19px;
   position: relative;
 }
 
-.form__module-radio:last-child {
-  margin-bottom: 0;
-}
-
 .form__radio-label {
-  padding: 6px 0 6px 15px;
+  align-self: center;
+  padding-inline: 15px 0;
+  padding-block: 0;
 }
 
 .form__checkbox-label {
-  padding: 6px 0 6px 15px;
+  align-self: center;
+  padding-inline: 15px 0;
+  padding-block: 0;
 }
-
-////////////////////////////////////////////////////////////
 
 .form__text-input::placeholder {
   @include form-common-text;
@@ -206,6 +307,7 @@
   color: $dark-gray;
   min-width: 100%;
   min-height: 150px;
+  margin-top: 38px;
   padding: 14px;
 
   @media (min-width: $tablet-width) {
@@ -231,9 +333,9 @@
 }
 
 .form__module-legend {
-  font-size: 24px;
-  line-height: 26px;
+  @include form-legend;
   text-transform: none;
+  margin: 0;
 
   @media (min-width: $tablet-width) {
     @include common-title;
@@ -241,19 +343,51 @@
   }
 }
 
-.legend-contacts {
-  margin-bottom: 35px;
+.form__comment-label {
+  @include form-legend;
+  text-transform: none;
 
-  @media (min-width: $tablet-width) {
-    margin-bottom: 76px;
+  &::before {
+    content: "";
+    display: block;
+    width: 141px;
+    height: 26px;
+    position: absolute;
+    background-color: $base-white;
+    z-index: -1;
+
+    @media (min-width: $tablet-width) {
+      width: 262px;
+      height: 36px;
+      left: -40px;
+    }
   }
-}
 
-.legend-comment {
-  margin-bottom: 38px;
+  &::after {
+    content: "";
+    background-color: $base-green;
+    z-index: -2;
+    width: 280px;
+    height: 2px;
+    position: absolute;
+    top: 16px;
+    right: -20px;
+
+    @media (min-width: $tablet-width) {
+      width: 768px;
+      top: 25px;
+      right: -100px;
+    }
+
+    @media (min-width: $tablet-width) {
+      width: 1440px;
+      right: -220px;
+    }
+  }
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 87px;
+    @include common-title;
+    text-transform: none;
   }
 }
 
@@ -299,21 +433,14 @@
   }
 }
 
-.legent-extra {
-  margin-bottom: 38px;
-
-  @media (min-width: $tablet-width) {
-    margin-bottom: 57px;
-  }
-}
-
 .form__module--extra {
   border: none;
   margin: 0;
-  padding: 0;
+  padding-inline: 0;
+  padding-block: 0 34px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 52px;
+    padding-block-end: 52px;
   }
 
   @media (min-width: $desktop-width) {
@@ -321,21 +448,29 @@
   }
 }
 
+.form__extra-container {
+  display: grid;
+  row-gap: 34px;
+}
+
 .form__module-check {
   display: grid;
   grid-template-columns: auto 1fr;
-  margin-bottom: 13px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+  }
 
   @media (min-width: $tablet-width) {
     margin: 0;
   }
 }
 
-.form__module-check:last-child {
-  margin-bottom: 34px;
+.form__module-legend--extra {
+  padding-bottom: 34px;
 
   @media (min-width: $tablet-width) {
-    margin: 0;
+    padding-bottom: 67px;
   }
 }
 
@@ -397,6 +532,7 @@
   }
 }
 
+
 .form__module-list--extra {
   @media (min-width: $tablet-width) {
     display: grid;
@@ -407,14 +543,6 @@
   @media (min-width: $desktop-width) {
     grid-template-columns: repeat(4, 1fr);
     margin-bottom: 52px;
-  }
-}
-
-.form__module--contacts .form__module-list {
-  @media (min-width: $desktop-width) {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 80px;
   }
 }
 
