--- a/source/styles/blocks/main.scss
+++ b/source/styles/blocks/main.scss
@@ -3,22 +3,15 @@
 }
 
 .main__form-container {
-  margin-bottom: 32px;
+  display: grid;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 60px;
+    padding-inline: 70px;
     grid-template-columns: 1fr 1fr;
-    display: grid;
   }
-}
 
-.form__title {
-  @include common-title;
-  margin: 27px 0 37px;
-
-  @media (min-width: $tablet-width) {
-    @include common-title-big;
-    margin: 27px 0 54px;
-    grid-column: 1 / 3;
+  @media (min-width: $desktop-width) {
+    padding-inline: 0;
+    column-gap: 80px;
   }
 }
