--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -126,7 +126,7 @@
     width: 100vw;
     height: 2px;
     top: 15px;
-    right: 176px;
+    right: 0;
     box-shadow: 100vw 0 0 0 $base-green;
   }
 
