--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -161,42 +161,22 @@
 .form__module-legend--contacts {
   position: relative;
   padding-bottom: 35px;
-  grid-column: 1 / 3;
-
-  &::before {
-    content: "";
-    display: block;
-    width: 207px;
-    height: 52px;
-    position: absolute;
-    background-color: $base-white;
-    z-index: -1;
-
-    @media (min-width: $tablet-width) {
-      width: 592px;
-      height: 36px;
-      left: -40px;
-    }
-  }
+  background-color: $base-white;
+  box-shadow: -20px 0 0 0 $base-white, 20px 0 0 0 $base-white;
 
   &::after {
     content: "";
     background-color: $base-green;
-    z-index: -2;
-    width: 280px;
-    height: 2px;
     position: absolute;
-    top: 16px;
-    right: -115px;
+    z-index: -1;
+    width: 100vw;
+    height: 2px;
+    top: 15px;
+    right: 0;
+    box-shadow: 100vw 0 0 0 $base-green;
 
     @media (min-width: $tablet-width) {
-      width: 100vw;
-      top: 22px;
-      right: -151px;
-    }
-
-    @media (min-width: $desktop-width) {
-      left: -220px;
+      top: 25px;
     }
   }
 
@@ -346,42 +326,22 @@
 .form__comment-label {
   @include form-legend;
   text-transform: none;
-
-  &::before {
-    content: "";
-    display: block;
-    width: 141px;
-    height: 26px;
-    position: absolute;
-    background-color: $base-white;
-    z-index: -1;
-
-    @media (min-width: $tablet-width) {
-      width: 262px;
-      height: 36px;
-      left: -40px;
-    }
-  }
+  background-color: $base-white;
+  box-shadow: -20px 0 0 0 $base-white, 20px 0 0 0 $base-white;
 
   &::after {
     content: "";
     background-color: $base-green;
-    z-index: -2;
-    width: 280px;
-    height: 2px;
     position: absolute;
-    top: 16px;
-    right: -20px;
+    z-index: -1;
+    width: 100vw;
+    height: 2px;
+    top: 15px;
+    right: 0;
+    box-shadow: 100vw 0 0 0 $base-green;
 
     @media (min-width: $tablet-width) {
-      width: 768px;
       top: 25px;
-      right: -100px;
-    }
-
-    @media (min-width: $tablet-width) {
-      width: 1440px;
-      right: -220px;
     }
   }
 
@@ -467,7 +427,26 @@
 }
 
 .form__module-legend--extra {
+  position: relative;
+  background-color: $base-white;
+  box-shadow: -20px 0 0 0 $base-white, 20px 0 0 0 $base-white;
   padding-bottom: 34px;
+
+  &::after {
+    content: "";
+    background-color: $base-green;
+    position: absolute;
+    z-index: -1;
+    width: 100vw;
+    height: 2px;
+    top: 15px;
+    right: 0;
+    box-shadow: 100vw 0 0 0 $base-green;
+
+    @media (min-width: $tablet-width) {
+      top: 25px;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     padding-bottom: 67px;
