--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -4,6 +4,15 @@
   box-sizing: content-box;
   position: relative;
 
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+
+
   @media (min-width: $tablet-width) {
     position: static;
   }
