--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -10,12 +10,29 @@
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
+
+  &:hover {
+    background-color: $dark-green;
+  }
+
+  &:active {
+    color: rgb(255, 255, 255, 0.3);
+  }
 }
 
 .button--more {
+  @include link-reset;
+  @include product-title;
+  display: flex;
+  justify-content: center;
   background-color: $basic-grey;
   color: $dark-gray;
   grid-column: 1 / 3;
+  text-transform: uppercase;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
 }
 
 .button--other {
