Отключает курсор в меню на активной странице

--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -91,6 +91,8 @@
 
 
 .main-nav__link--active {
+  pointer-events: none;
+
   @media (min-width: $tablet-width) {
     &::after {
       content: "";
