--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -10,6 +10,7 @@ $special-gray: #cdcdcd;
 $light-special-gray: #d9d9d9;
 $light-gray: #e6e6e6;
 $very-light-gray: #e7e7e7;
+$focus-invalid: #ff8282;
 
 // Viewports
 $mobile-width-only: 767px;
