--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -10,7 +10,7 @@
     height: 1px;
     background-color: $light-special-gray;
     position: absolute;
-    top: 439px;
+    top: 457px;
   }
 
   &::after {
@@ -20,7 +20,7 @@
     height: 1px;
     background-color: $light-special-gray;
     position: absolute;
-    top: 596px;
+    top: 614px;
   }
 
   @media (min-width: $tablet-width) {
@@ -75,6 +75,43 @@
   }
 }
 
+.form__module--info {
+  border: none;
+  margin: 0;
+  padding-inline: 0;
+  padding-block: 37px 24px;
+
+  @media (min-width: $tablet-width) {
+    padding-block: 66px 70px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 2;
+    padding-block: 0;
+  }
+}
+
+.form__module-list {
+  @include list-reset;
+  display: grid;
+  row-gap: 13px;
+
+  @media (min-width: $tablet-width) {
+    row-gap: 18px;
+  }
+}
+
+
+.form__module-list {
+  @include list-reset;
+  display: grid;
+  row-gap: 13px;
+
+  @media (min-width: $tablet-width) {
+    row-gap: 18px;
+  }
+}
+
 .form__module-legend {
   @include form-legend;
   text-transform: none;
@@ -113,26 +150,11 @@
   }
 }
 
-.form__module--info {
-  border: none;
-  margin: 0;
-  padding-inline: 0;
-  padding-block: 37px 24px;
-
-  @media (min-width: $tablet-width) {
-    padding-block: 66px 70px;
-  }
-
-  @media (min-width: $desktop-width) {
-    grid-column: 1 / 2;
-    padding-block: 0;
-  }
-}
-
 .form__text-label {
-  flex-shrink: 0;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
   font-size: 16px;
-  margin-right: 15px;
   color: $dark-gray;
   text-transform: uppercase;
   cursor: pointer;
@@ -143,10 +165,8 @@
 }
 
 .form__text-input {
-  width: 100%;
-  min-width: 80px;
-  margin: 0;
-  padding: 11px 15px;
+  margin-left: 13px;
+  padding: 14px 15px;
   border: 1px solid $very-light-gray;
   font-family: inherit;
   font-size: 16px;
@@ -163,6 +183,15 @@
   @media (min-width: $tablet-width) {
     @include common-text-big;
     padding: 11px 20px;
+  }
+}
+
+.form__text-input::placeholder {
+  @include form-common-text;
+  color: $dark-gray;
+
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
   }
 }
 
@@ -249,60 +278,47 @@
   }
 }
 
-.form__module-list {
-  @include list-reset;
-  display: grid;
-  row-gap: 13px;
-
-  @media (min-width: $tablet-width) {
-    row-gap: 18px;
-  }
-}
-
-.form__module-item {
-  display: flex;
-  align-items: center;
-  margin: 0;
-}
-
 .form__module-radio {
   display: grid;
   grid-template-columns: auto 1fr;
   position: relative;
 }
 
+.form__radio-input {
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  appearance: none;
+  border: 1px solid $special-gray;
+  border-radius: 50%;
+
+  &[type="radio"]:checked::after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    width: 13px;
+    height: 13px;
+    background-color: $base-green;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &:disabled {
+    opacity: 0.3;
+    pointer-events: none;
+  }
+}
+
 .form__radio-label {
   align-self: center;
   padding-inline: 15px 0;
   padding-block: 0;
+} 
 
-  &:disabled {
-    opacity: 0.3;
-  }
-}
-
-.form__checkbox-label {
-  align-self: center;
-  padding-inline: 15px 0;
-  padding-block: 0;
-}
-
-.form__text-input::placeholder {
-  @include form-common-text;
-  color: $dark-gray;
-
-  @media (min-width: $tablet-width) {
-    @include common-text-big;
-  }
-}
-
-.form__field-input::placeholder {
-  @include form-common-text;
-  color: $dark-gray;
-
-  @media (min-width: $tablet-width) {
-    @include common-text-big;
-  }
+.form__radio-input:disabled + .form__radio-label {
+  opacity: 0.3;
+  pointer-events: none;
 }
 
 .form__comment-input {
@@ -329,6 +345,15 @@
   padding-top: 10px;
   padding-bottom: 10px;
   margin-bottom: 21px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $dark-green;
+  }
+
+  &:active {
+    color: rgb(255, 255, 255, 0.3);
+  }
 
   @media (min-width: $tablet-width) {
     @include form-button;
@@ -364,23 +389,56 @@
 }
 
 .form__field-label {
-  flex-shrink: 0;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
   font-size: 16px;
-  margin-right: 15px;
   color: $dark-gray;
   text-transform: uppercase;
   cursor: pointer;
+  margin: 0;
+  position: relative;
 
+  &:has(.form__field-input[type="email"])::before {
+    content: "";
+    position: absolute;
+    right: 12px;
+    display: block;
+    width: 20px;
+    height: 20px;
+    mask-image: url("../../icons/icon-email.svg");
+    background-color: #000000;
+  }
+
+  &:has(.form__field-input[type="tel"])::before {
+    content: "";
+    position: absolute;
+    right: 12px;
+    display: block;
+    width: 20px;
+    height: 20px;
+    mask-image: url("../../icons/icon-phone.svg");
+    background-color: #000000;
+  }
+  
   @media (min-width: $tablet-width) {
     @include common-text-big;
   }
 }
 
+.form__field-label
 .form__field-input {
-  width: 100%;
-  min-width: 80px;
-  margin: 0;
+  &::placeholder {
+    @include form-common-text;
+    color: $dark-gray;
+  
+    @media (min-width: $tablet-width) {
+      @include common-text-big;
+    }
+  }
+
   padding: 11px 15px;
+  margin-left: 13px;
   border: 1px solid $very-light-gray;
   font-family: inherit;
   font-size: 16px;
@@ -402,6 +460,19 @@
     @include common-text-big;
   }
 }
+
+// .form__module-icon {
+//   position: absolute;
+//   right: 12px;
+
+//   @media (min-width: $tablet-width) {
+//     right: 14px;
+//   }
+
+//   @media (min-width: $desktop-width) {
+//     right: 16px;
+//   }
+// }
 
 .form__module--extra {
   border: none;
@@ -464,17 +535,36 @@
 }
 
 .form__checkbox-input {
+  margin: 0;
   width: 30px;
   height: 30px;
   background-color: $base-white;
   border: 1px solid $special-gray;
   appearance: none;
+  cursor: pointer;
+
+  &:disabled {
+    opacity: 0.3;
+    pointer-events: none;
+  }
 }
 
 .form__checkbox-input[type="checkbox"]:checked {
   background-image: url("../../icons/icon-check-mark.svg");
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.form__checkbox-label {
+  align-self: center;
+  padding-inline: 15px 0;
+  padding-block: 0;
+  cursor: pointer; 
+}
+
+.form__checkbox-input:disabled + .form__checkbox-label {
+    opacity: 0.3;
+    pointer-events: none;
 }
 
 .form__submit-note {
@@ -542,27 +632,3 @@
   }
 }
 
-.form__radio-input {
-  margin: 0;
-  width: 30px;
-  height: 30px;
-  appearance: none;
-  border: 1px solid $special-gray;
-  border-radius: 50%;
-
-  &[type="radio"]:checked::after {
-    content: "";
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    width: 13px;
-    height: 13px;
-    background-color: $base-green;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  &:disabled {
-    opacity: 0.3;
-  }
-}
