--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -6,7 +6,7 @@
 @import "./mixins.scss";
 @import "./variables.scss";
 
-//Общие блоки для всех страниц
+//Блоки
 @import "./blocks/page-header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/page.scss";
@@ -26,6 +26,4 @@
 @import "./blocks/other-action.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/container";
-
-//Блоки формы подбора программы
-@import "./blocks/form.scss"
+@import "./blocks/form.scss";
