--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -399,7 +399,7 @@
     display: block;
     width: 20px;
     height: 20px;
-    mask-image: url("../../icons/icon-email.svg");
+    mask: url("../../icons/icon-email.svg");
     background-color: #000000;
   }
 
@@ -410,7 +410,7 @@
     display: block;
     width: 20px;
     height: 20px;
-    mask-image: url("../../icons/icon-phone.svg");
+    mask: url("../../icons/icon-phone.svg");
     background-color: #000000;
   }
 
