--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -6,6 +6,7 @@ $base-black: #000000;
 $basic-grey: #f2f2f2;
 $sample-gray: #eaeaea;
 $dark-gray: #444444;
+$medium-gray: #666666;
 $special-gray: #cdcdcd;
 $light-special-gray: #d9d9d9;
 $light-gray: #e6e6e6;
