--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -10,6 +10,10 @@
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
+
+  &:focus-visible {
+    opacity: 0.8;
+  }
 }
 
 .button--more {
@@ -25,6 +29,10 @@
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
+
+  &:focus-visible {
+    opacity: 0.8;
+  }
 }
 
 .button--other {
@@ -36,6 +44,10 @@
 
   &:active {
     color: rgb(255, 255, 255, 0.3);
+  }
+
+  &:focus-visible {
+    opacity: 0.8;
   }
 
   @media (min-width: $desktop-width) {
