--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -117,14 +117,20 @@
     outline: 2px solid $dark-gray;
   }
 
-  &:user-invalid {
-    outline: 2px solid $focus-invalid;
-  }
-
   @media (min-width: $tablet-width) {
     @include common-text-big;
     padding: 11px 20px;
   }
+}
+
+.form__text-input[type="number"] {
+  appearance: textfield;
+}
+
+.form__text-input::-webkit-outer-spin-button,
+.form__text-input::-webkit-inner-spin-button {
+  margin: 0;
+  appearance: none;
 }
 
 .form__text-input::placeholder {
@@ -134,6 +140,10 @@
   @media (min-width: $tablet-width) {
     @include common-text-big;
   }
+}
+
+.form__text-input--invalid:user-invalid {
+  outline: 2px solid $focus-invalid;
 }
 
 .form__module-legend {
@@ -494,7 +504,7 @@
   position: relative;
   background-color: $base-white;
   box-shadow: -20px 0 0 0 $base-white, 20px 0 0 0 $base-white;
-  padding-bottom: 34px;
+  margin-bottom: 34px;
 
   &::after {
     content: "";
@@ -513,7 +523,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding-bottom: 67px;
+    margin-bottom: 67px;
   }
 }
 
