--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -4,9 +4,6 @@
 }
 
 .footer__logo {
-  display: block;
-  padding-top: 40px;
-  padding-bottom: 20px;
   text-align: center;
 
   @media (min-width: $desktop-width) {
@@ -148,6 +145,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-block: 56px;
   }
 
   @media (min-width: $desktop-width) {
