--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,9 +1,38 @@
 .promo {
-  background-image: linear-gradient(to top, #ffffff 216px, rgba(104, 183, 56, 0.85) 200px), image-set(url("../../images/index-background-mobile@1x.png") type("image/png") 1x, url("../../images/index-background-mobile@2x.png") type("image/png") 2x, url("../../images/index-background-mobile@1x.webp") type("image/webp") 1x, url("../../images/index-background-mobile@2x.webp") type("image/webp") 2x);
-  background-repeat: no-repeat;
-  background-position: top center;
-  padding-top: 27px;
-  padding-bottom: 20px;
+  padding-block: 27px 20px;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 302px;
+    background-color: rgba(104, 183, 56, 0.85);
+    position: absolute;
+    top: 71px;
+    z-index: -1;
+
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 302px;
+    background-image: image-set(url("../../images/index-background-mobile@1x.png") type("image/png") 1x, url("../../images/index-background-mobile@2x.png") type("image/png") 2x, url("../../images/index-background-mobile@1x.webp") type("image/webp") 1x, url("../../images/index-background-mobile@2x.webp") type("image/webp") 2x);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: absolute;
+    top: 71px;
+    z-index: -2;
+
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     background: none;
@@ -13,6 +42,10 @@
   @media (min-width: $desktop-width) {
     padding-bottom: 266px;
   }
+
+  // background-image: linear-gradient(to top, #ffffff 216px, rgba(104, 183, 56, 0.85) 200px), image-set(url("../../images/index-background-mobile@1x.png") type("image/png") 1x, url("../../images/index-background-mobile@2x.png") type("image/png") 2x, url("../../images/index-background-mobile@1x.webp") type("image/webp") 1x, url("../../images/index-background-mobile@2x.webp") type("image/webp") 2x);
+  // background-repeat: no-repeat;
+  // background-position: top center;
 }
 
 .promo__container {
@@ -87,16 +120,18 @@
 .promo__content-image {
   display: block;
   margin: auto;
+  padding-top: 14px;
 
   @media (min-width: $tablet-width) {
+    padding-top: 0;
     grid-column: 2 / 3;
     grid-row: 3 / 5;
   }
 
   @media (min-width: $desktop-width) {
     grid-area: 1 / 3 / 4 / -1;
-    margin-block-start: -80px;
-    margin-inline-start: -180px;
+    margin-block-start: -95px;
+    margin-inline-start: -202px;
   }
 }
 
