--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -6,10 +6,10 @@
     display: block;
     width: 100%;
     height: 302px;
-    background-color: rgba(104, 183, 56, 0.85);
+    background-image: linear-gradient(to right top, #525257, #403f44);
     position: absolute;
     top: 71px;
-    z-index: -1;
+    z-index: -2;
 
     @media (min-width: $tablet-width) {
       display: none;
@@ -21,13 +21,13 @@
     display: block;
     width: 100%;
     height: 302px;
-    background-image: image-set(url("../../images/index-background-mobile@1x.png") type("image/png") 1x, url("../../images/index-background-mobile@2x.png") type("image/png") 2x, url("../../images/index-background-mobile@1x.webp") type("image/webp") 1x, url("../../images/index-background-mobile@2x.webp") type("image/webp") 2x);
+    background-image: linear-gradient(hsla(97, 53%, 47%, 0.8) 100%, #68b738), image-set(url("../../images/index-background-mobile@1x.png") type("image/png") 1x, url("../../images/index-background-mobile@2x.png") type("image/png") 2x, url("../../images/index-background-mobile@1x.webp") type("image/webp") 1x, url("../../images/index-background-mobile@2x.webp") type("image/webp") 2x);
+
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: cover;
     position: absolute;
     top: 71px;
-    z-index: -2;
+    z-index: -1;
 
     @media (min-width: $tablet-width) {
       display: none;
