--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -9,6 +9,7 @@ $dark-gray: #444444;
 $medium-gray: #666666;
 $special-gray: #cdcdcd;
 $light-special-gray: #d9d9d9;
+$hover-light-gray: #bababa;
 $light-gray: #e6e6e6;
 $very-light-gray: #e7e7e7;
 $focus-invalid: #ff8282;
