--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
-    column-gap: 33px;
+    column-gap: 15px;
     font-size: 18px;
     line-height: 24px;
   }
@@ -46,6 +46,10 @@
   text-transform: uppercase;
   padding-block: 23px;
   padding-inline: 20px 0;
+
+  @media (min-width: $tablet-width) {
+    padding-inline: 21px 0;
+  }
 
   @media (min-width: $desktop-width) {
     font-size: 20px;
@@ -107,7 +111,7 @@
       content: "";
       position: relative;
       display: block;
-      bottom: -4px;
+      bottom: -6px;
       width: 100%;
       height: 2px;
       border-bottom: 2px solid $base-green;
